--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   rel="stylesheet"/>
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+
+<!-- link to css -->
+<link rel="stylesheet" href="assets/css/style.css" />
 </head>
-<body>
+
+<body> 
+    <!-- bootstrap javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
