--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
-<body> 
+<body>   
+    <!-- navbar -->
+    <header class="fixed-top bg-dark text-white p-3">
+        <div class="container">
+        </div>
+      </header>
+      
     <!-- bootstrap javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
