--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <body>   
     <!-- navbar -->
     <header class="fixed-top bg-dark text-white p-3">
-        <div class="container">
+        <div class="container d-flex">
         </div>
       </header>
+      
       
     <!-- bootstrap javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
