--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-
+ 
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+/>
 <!-- link to css -->
 <link rel="stylesheet" href="assets/css/style.css" />
 </head>
