Add simplified footer with copyright and supporting text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
   <h3>Practice Quizzes</h3>
   <p>Test your knowledge with our interactive quizzes.</p>
   <a href="quiz.html" class="btn btn-dark">Start Quiz</a>
-</section>
+</section> 
+
+<footer class="bg-dark text-white text-center py-4">
+    <p class="mb-1">© 2026 LearnDrive</p>
+    <p class="mb-2">Supporting learner drivers across the UK</p>
+  </footer>
+  
 
       
     
