Add label for topic filter dropdown

--- a/topics.html
+++ b/topics.html
@@ -36,9 +36,11 @@
       <main>  
 
         <!-- ================= TOPIC FILTER CONTAINER ================= -->
-<div class="mb-4 text-center">
-</div>
-
+        <div class="mb-4 text-center">
+            <!-- Label for filter dropdown -->
+            <label for="topicFilter" class="form-label me-2">Filter by category:</label>
+        </div>
+        
 
 
 
