Add select element for topic filtering

--- a/topics.html
+++ b/topics.html
@@ -37,9 +37,12 @@
 
         <!-- ================= TOPIC FILTER CONTAINER ================= -->
         <div class="mb-4 text-center">
-            <!-- Label for filter dropdown -->
             <label for="topicFilter" class="form-label me-2">Filter by category:</label>
+            <!-- Dropdown select element -->
+            <select id="topicFilter">
+            </select>
         </div>
+        
         
 
 
