Add 'Road Signs' and 'Hazards' options to topic filter

--- a/topics.html
+++ b/topics.html
@@ -40,7 +40,10 @@
             <label for="topicFilter" class="form-label me-2">Filter by category:</label>
             <!-- Dropdown select element -->
             <select id="topicFilter">
-                <option value="all">All</option>
+                <option value="all">All</option> 
+                <option value="road-signs">Road Signs</option>
+<option value="hazards">Hazard Perception</option>
+
             </select>
             
         </div>
