Add 'Speed Awareness', 'Rules & Regulations', and 'Other Topics' options

--- a/topics.html
+++ b/topics.html
@@ -42,7 +42,11 @@
             <select id="topicFilter">
                 <option value="all">All</option> 
                 <option value="road-signs">Road Signs</option>
-<option value="hazards">Hazard Perception</option>
+<option value="hazards">Hazard Perception</option> 
+<option value="speed">Speed Awareness</option>
+<option value="rules">Rules & Regulations</option>
+<option value="other">Other Topics</option>
+
 
             </select>
             
