--- a/topics.html
+++ b/topics.html
@@ -61,7 +61,12 @@
             aria-expanded="false" aria-controls="collapseOne">
       Road Signs
     </button>
-  </h2>
+  </h2> 
+  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#topicsList">
+    <div class="accordion-body">
+    </div>
+  </div>
+  
   
 
 
