Add introductory paragraphs explaining Road Signs importance

--- a/topics.html
+++ b/topics.html
@@ -65,7 +65,12 @@
   <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#topicsList">
     <div class="accordion-body">
     </div>
-  </div>
+  </div> 
+  <p>Road signs provide essential guidance, warnings, and regulations to ensure safe and smooth traffic flow. Understanding them quickly is crucial for learner drivers.</p>
+<p>Signs vary by shape, colour, and symbols. For example, triangular signs warn of hazards, circular signs provide orders, and rectangular signs give information.</p>
+<p>Regular revision of signs helps build quick recognition and reduces reaction time in real driving situations.</p>
+<p>See below a link to the DVLA official signs for practice</p>
+
   
   
 
