Add list describing types of Road Signs

--- a/topics.html
+++ b/topics.html
@@ -75,7 +75,13 @@
     <a href="https://assets.publishing.service.gov.uk/media/560aa95b40f0b6036a00002a/the-highway-code-traffic-signs.pdf" target="_blank" rel="noopener noreferrer">
       The Highway Code – Traffic Signs (PDF)
     </a>
-  </p>
+  </p> 
+  <ul>
+    <li>Warning: Triangular, yellow background, alert to hazards.</li>
+    <li>Regulatory: Circular, white/red or blue, instructs what to do or not do.</li>
+    <li>Informational: Rectangular, provides guidance, directions, or facilities.</li>
+  </ul>
+  
   
 
   
