Fix navbar alignment on topics.html to match index.html layout

--- a/topics.html
+++ b/topics.html
@@ -29,22 +29,19 @@
   
 <body>
 
-<!-- ===== HEADER ===== -->
-<header class="fixed-top bg-dark">
-  <nav class="container d-flex flex-column flex-md-row justify-content-between align-items-center py-3">
-    <!-- Logo / Site Title -->
-    <a href="index.html" class="text-white text-decoration-none mb-2 mb-md-0">
+<!-- ================= NAVBAR ================= -->
+<header class="fixed-top bg-dark text-white p-3">
+    <div class="container d-flex justify-content-between align-items-center">
+      <!-- Site branding -->
       <h1 class="h4 mb-0">LearnDrive</h1>
-    </a>
-
-    <!-- Navigation Links -->
-    <div class="nav" aria-label="Primary navigation">
-      <a class="nav-link text-white" href="index.html">Home</a>
-      <a class="nav-link text-white active" href="topics.html" aria-current="page">Topics</a>
-      <a class="nav-link text-white" href="quiz.html">Quiz</a>
+      <!-- Navigation links -->
+      <nav>
+        <a href="index.html" class="text-white me-3">Home</a>
+        <a href="topics.html" class="text-white me-3">Topics</a>
+        <a href="quiz.html" class="text-white">Quiz</a>
+      </nav>
     </div>
-  </nav>
-</header>
+</header> 
 
 
 <!-- ===== MAIN CONTENT ===== -->
