Add container for quiz questions and results

--- a/quiz.html
+++ b/quiz.html
@@ -41,7 +41,10 @@
       </main> 
       <div class="progress">
         <div id="quizProgress" class="progress-bar bg-dark" style="width:0%">0%</div>
-      </div>
+      </div> 
+      <div id="quizContainer"></div>
+<div id="quizResult"></div>
+
       
       
        <!--Footer -->
