Add Restart Quiz button with onclick handler

--- a/quiz.html
+++ b/quiz.html
@@ -43,7 +43,11 @@
         <div id="quizProgress" class="progress-bar bg-dark" style="width:0%">0%</div>
       </div> 
       <div id="quizContainer"></div>
-<div id="quizResult"></div>
+<div id="quizResult"></div> 
+<div class="text-center my-3">
+    <button class="btn btn-primary" onclick="restartQuiz()">Restart Quiz</button>
+  </div>
+  
 
       
       
