Add Hazard Perception section heading

--- a/quiz.html
+++ b/quiz.html
@@ -46,7 +46,11 @@
 <div id="quizResult"></div> 
 <div class="text-center my-3">
     <button class="btn btn-primary" onclick="restartQuiz()">Restart Quiz</button>
+  </div> 
+  <div class="text-center my-4">
+    <h2>Hazard Perception</h2>
   </div>
+  
   
 
       
