Add video card container for hazard perception videos

--- a/quiz.html
+++ b/quiz.html
@@ -49,7 +49,15 @@
   </div> 
   <div class="text-center my-4">
     <h2>Hazard Perception</h2>
+  </div> 
+  <div class="video-card">
+    <div id="hazardVideoContainer" class="video-container">
+      <video id="hazardVideo" width="100%" controls>
+        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+      </video>
+    </div>
   </div>
+  
   
   
 
