--- a/quiz.html
+++ b/quiz.html
@@ -56,7 +56,11 @@
         <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
       </video>
     </div>
+  </div> 
+  <div class="mt-3">
+    <button id="nextHazardBtn" class="btn btn-primary">Next Video</button>
   </div>
+  
   
   
   
