--- a/quiz.html
+++ b/quiz.html
@@ -59,7 +59,9 @@
   </div> 
   <div class="mt-3">
     <button id="nextHazardBtn" class="btn btn-primary">Next Video</button>
-  </div>
+  </div> 
+  <p class="mt-2" id="hazardScoreDisplay">Hazard Perception Score: 0</p>
+
   
   
   
