--- a/quiz.html
+++ b/quiz.html
@@ -60,7 +60,9 @@
   <div class="mt-3">
     <button id="nextHazardBtn" class="btn btn-primary">Next Video</button>
   </div> 
-  <p class="mt-2" id="hazardScoreDisplay">Hazard Perception Score: 0</p>
+  <p class="mt-2" id="hazardScoreDisplay">Hazard Perception Score: 0</p> 
+  <p class="mt-1" id="hazardVideoCount">Video 1 of 8</p>
+
 
   
   
