Add comments explaining quiz section structure

--- a/quiz.html
+++ b/quiz.html
@@ -61,7 +61,18 @@
     <button id="nextHazardBtn" class="btn btn-primary">Next Video</button>
   </div> 
   <p class="mt-2" id="hazardScoreDisplay">Hazard Perception Score: 0</p> 
-  <p class="mt-1" id="hazardVideoCount">Video 1 of 8</p>
+  <p class="mt-1" id="hazardVideoCount">Video 1 of 8</p> 
+  <!-- Practice Quiz Section -->
+<h2 class="text-center">Practice Quiz</h2>
+<!-- Progress bar shows quiz completion -->
+<div class="progress">
+  <div id="quizProgress" class="progress-bar bg-dark" style="width:0%">0%</div>
+</div>
+<!-- Container for quiz questions -->
+<div id="quizContainer"></div>
+<!-- Container for quiz results -->
+<div id="quizResult"></div>
+
 
 
   
