Add comments explaining hazard perception video section

--- a/quiz.html
+++ b/quiz.html
@@ -71,7 +71,28 @@
 <!-- Container for quiz questions -->
 <div id="quizContainer"></div>
 <!-- Container for quiz results -->
-<div id="quizResult"></div>
+<div id="quizResult"></div> 
+<!-- Hazard Perception Section -->
+<div class="text-center my-4">
+    <h2>Hazard Perception</h2>
+    <div class="video-card">
+      <!-- Video container -->
+      <div id="hazardVideoContainer" class="video-container">
+        <video id="hazardVideo" width="100%" controls>
+          <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        </video>
+      </div>
+      <!-- Next video button -->
+      <div class="mt-3">
+        <button id="nextHazardBtn" class="btn btn-primary">Next Video</button>
+      </div>
+      <!-- Score display -->
+      <p class="mt-2" id="hazardScoreDisplay">Hazard Perception Score: 0</p>
+      <!-- Video counter -->
+      <p class="mt-1" id="hazardVideoCount">Video 1 of 8</p>
+    </div>
+  </div>
+  
 
 
 
