--- a/quiz.html
+++ b/quiz.html
@@ -153,6 +153,12 @@
         
       
     <!-- bootstrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- ================= BOOTSTRAP JAVASCRIPT ================= -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- ================= QUIZ & HAZARD PERCEPTION JAVASCRIPT ================= -->
+
+<script src="assets/js/quiz.js"></script>
+
 </body>
 </html>
