Add first radio option for Question 1 with accessible label mapping

--- a/quiz.html
+++ b/quiz.html
@@ -64,11 +64,15 @@
         <!-- Will be populated by JavaScript with questions and options --> 
 
         <!-- questions -->  
-         <!-- Question 1: Container and heading -->
+         <!-- Question 1 -->
 <div class="mb-4">
     <!-- Question text -->
     <h5>1. What does a red octagon sign indicate?</h5>
-    <div>
+    <div> 
+            <!-- Radio input for option 1 -->
+    <input type="radio" name="q1" value="Stop" id="q1a" />
+    <label for="q1a"> Stop</label><br>
+
   
 
 
