Add second radio option for Question 1 with label association and spacing

--- a/quiz.html
+++ b/quiz.html
@@ -71,7 +71,11 @@
     <div> 
             <!-- Radio input for option 1 -->
     <input type="radio" name="q1" value="Stop" id="q1a" />
-    <label for="q1a"> Stop</label><br>
+    <label for="q1a"> Stop</label><br> 
+        <!-- Radio input for option 2 -->
+        <input type="radio" name="q1" value="Yield" id="q1b" />
+        <label for="q1b"> Yield</label><br>
+    
 
   
 
