Added third radio option for Question 1 and close container div; maintain consistent styling

--- a/quiz.html
+++ b/quiz.html
@@ -74,7 +74,13 @@
     <label for="q1a"> Stop</label><br> 
         <!-- Radio input for option 2 -->
         <input type="radio" name="q1" value="Yield" id="q1b" />
-        <label for="q1b"> Yield</label><br>
+        <label for="q1b"> Yield</label><br> 
+            <!-- Radio input for option 3 -->
+    <input type="radio" name="q1" value="Do Not Enter" id="q1c" />
+    <label for="q1c"> Do Not Enter</label><br>
+  </div>
+</div>
+
     
 
   
