commented out radio questions due to user interactivity and UX

--- a/quiz.html
+++ b/quiz.html
@@ -63,23 +63,18 @@
         <div id="quizContainer"></div>
         <!-- Will be populated by JavaScript with questions and options --> 
 
-        <!-- questions -->  
-         <!-- Question 1 -->
-<div class="mb-4">
-    <!-- Question text -->
-    <h5>1. What does a red octagon sign indicate?</h5>
-    <div> 
-            <!-- Radio input for option 1 -->
-    <input type="radio" name="q1" value="Stop" id="q1a" />
-    <label for="q1a"> Stop</label><br> 
-        <!-- Radio input for option 2 -->
-        <input type="radio" name="q1" value="Yield" id="q1b" />
-        <label for="q1b"> Yield</label><br> 
-            <!-- Radio input for option 3 -->
-    <input type="radio" name="q1" value="Do Not Enter" id="q1c" />
-    <label for="q1c"> Do Not Enter</label><br>
-  </div>
-</div>
+        <!-- QUESTIONS -->  
+         <!-- removed questions that used radio function due to not meeting UX requirements
+          will replace with a dynamic option with better usabillity and interaction --> 
+        <!-- Question 1 -->
+    <!-- <div class="mb-4">
+        <h5>1. What does a red octagon sign indicate?</h5>
+        <div>
+          <input type="radio" name="q1" value="Stop" id="q1a" /><label for="q1a"> Stop</label><br>
+          <input type="radio" name="q1" value="Yield" id="q1b" /><label for="q1b"> Yield</label><br>
+          <input type="radio" name="q1" value="Do Not Enter" id="q1c" /><label for="q1c"> Do Not Enter</label><br>
+        </div>
+      </div> -->
 
     
 
