initial quiz function placeholder with no logic

--- a/topics.html
+++ b/topics.html
@@ -71,13 +71,19 @@
     <!-- Header contains a button that toggles the collapsible content -->
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button collapsed" type="button"
-              data-bs-toggle="collapse"            <!-- Bootstrap: toggles collapse -->
-              data-bs-target="#collapseOne"       <!-- Targets the content div -->
-              aria-expanded="false"               <!-- Accessibility: initial state collapsed -->
-              aria-controls="collapseOne">        <!-- Accessibility: links to content -->
+              data-bs-toggle="collapse"                         
+              data-bs-target="#collapseOne"       
+              aria-expanded="false"               
+              aria-controls="collapseOne">        
         Road Signs
       </button>
-    </h2>
+    </h2> 
+
+     <!-- Bootstrap: toggles collapse --> 
+      <!-- Targets the content div --> 
+      <!-- Accessibility: initial state collapsed --> 
+     <!-- Accessibility: links to content -->
+
   
     <!-- Accordion Collapsible Content -->
     <!-- This content is hidden by default and expands when the button is clicked -->
