--- a/quiz.html
+++ b/quiz.html
@@ -145,7 +145,18 @@ footer {
             <p class="mt-2" id="hazardScoreDisplay">Hazard Perception Score: 0</p>
             <p class="mt-1" id="hazardVideoCount">Video 1 of 8</p>
         </div>
-    </div>
+    </div> 
+    <!-- Hazard Restart Buttons -->
+<div class="mt-3 d-flex gap-2">
+    <button id="restartVideosBtn" class="btn btn-outline-secondary">
+      Restart Videos
+    </button>
+  
+    <button id="restartBothBtn" class="btn btn-outline-danger">
+      Restart Both
+    </button>
+  </div>
+  
 
 </main>
 
