--- a/quiz.html
+++ b/quiz.html
@@ -17,19 +17,19 @@
 <style>
 /* ================= GLOBAL STYLES ================= */
 html, body {
-    height: 100%; /* Needed for flex layout to allow sticky footer */
+    height: 100%;
     margin: 0; 
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background: #f8f9fa;
-    display: flex;           /* Flex container to allow footer positioning */
-    flex-direction: column;  /* Column layout: header, main, footer */
+    display: flex;
+    flex-direction: column;
 }
 
 /* ================= MAIN CONTENT ================= */
 main {
-    flex: 1;                 /* Fills remaining vertical space, pushing footer down */
-    margin-top: 70px;        /* Space for fixed navbar */
+    flex: 1;
+    margin-top: 70px;
 }
 
 /* ================= QUIZ CARD STYLES ================= */
@@ -82,12 +82,11 @@ main {
 
 /* ================= FOOTER ================= */
 footer {
-    /* Footer styling */
     background: #212529;
     color: white;
     text-align: center;
     padding: 20px 0;
-    margin-top: auto; /* Ensures footer stays at bottom in flex layout */
+    margin-top: auto;
 }
 </style>
 </head>
@@ -95,12 +94,10 @@ footer {
 <body>
 
 <!-- ================= NAVBAR ================= -->
-<header class="fixed-top bg-dark text-white p-3">
+<header class="fixed-top bg-dark text-white p-3" role="banner">
     <div class="container d-flex justify-content-between align-items-center">
-        <!-- Logo / Site Name -->
         <h1 class="h4 mb-0">LearnDrive</h1>
-        <!-- Navigation Links -->
-        <nav>
+        <nav role="navigation" aria-label="Main navigation">
             <a href="index.html" class="text-white me-3">Home</a>
             <a href="topics.html" class="text-white me-3">Topics</a>
             <a href="quiz.html" class="text-white">Quiz</a>
@@ -112,82 +109,62 @@ footer {
 <main class="container my-5 pt-3">
 
     <!-- ================= QUIZ HEADER ================= -->
-    <h2 class="text-center">Practice Quiz</h2>
+    <h2 class="text-center" id="quizHeading">Practice Quiz</h2>
 
     <!-- ================= PROGRESS BAR ================= -->
-    <div class="progress">
+    <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" aria-labelledby="quizHeading">
         <div id="quizProgress" class="progress-bar bg-dark" style="width:0%">0%</div>
     </div>
 
     <!-- ================= QUIZ CARD CONTAINER ================= -->
-    <div id="quizContainer"></div>
+    <div id="quizContainer" aria-live="polite" aria-atomic="true"></div>
 
     <!-- ================= QUIZ RESULT ================= -->
-    <div id="quizResult"></div>
+    <div id="quizResult" aria-live="polite"></div>
 
     <!-- ================= RESTART QUIZ BUTTON ================= -->
     <div class="text-center my-3">
-        <button class="btn btn-primary" onclick="restartQuiz()">Restart Quiz</button>
+        <button class="btn btn-primary" onclick="restartQuiz()" aria-label="Restart Quiz">Restart Quiz</button>
     </div> 
 
     <!-- ================= HAZARD PERCEPTION ================= -->
     <div class="text-center my-4">
-        <h2>Hazard Perception</h2>
+        <h2 id="hazardHeading">Hazard Perception</h2>
         <div class="video-card">
             <div id="hazardVideoContainer" class="video-container">
-                <video id="hazardVideo" width="100%" controls>
+                <video id="hazardVideo" width="100%" controls aria-labelledby="hazardHeading">
                     <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
                 </video>
             </div>
             <div class="mt-3">
-                <button id="nextHazardBtn" class="btn btn-primary">Next Video</button>
+                <button id="nextHazardBtn" class="btn btn-primary" aria-label="Next Hazard Video">Next Video</button>
             </div>
-            <p class="mt-2" id="hazardScoreDisplay">Hazard Perception Score: 0</p>
-            <p class="mt-1" id="hazardVideoCount">Video 1 of 8</p>
+            <p class="mt-2" id="hazardScoreDisplay" aria-live="polite">Hazard Perception Score: 0</p>
+            <p class="mt-1" id="hazardVideoCount" aria-live="polite">Video 1 of 8</p>
         </div>
     </div> 
+
     <!-- Hazard Restart Buttons -->
-<div class="mt-3 d-flex gap-2">
-    <button id="restartVideosBtn" class="btn btn-outline-secondary">
-      Restart Videos
-    </button>
-  
-    <button id="restartBothBtn" class="btn btn-outline-danger">
-      Restart Both
-    </button>
-  </div>
-  
+    <div class="mt-3 d-flex gap-2">
+        <button id="restartVideosBtn" class="btn btn-outline-secondary" aria-label="Restart Hazard Videos">Restart Videos</button>
+        <button id="restartBothBtn" class="btn btn-outline-danger" aria-label="Restart Quiz and Videos">Restart Both</button>
+    </div>
 
 </main>
 
 <!-- ================= FOOTER ================= -->
-<footer>
-    <!-- Site copyright -->
+<footer role="contentinfo">
     <p class="mb-1">© 2026 LearnDrive</p>
-    <!-- Tagline -->
     <p class="mb-2">Supporting learner drivers across the UK</p>
-    <!-- Social Icons -->
-<a href="https://www.facebook.com" target="_blank" class="text-white me-2">
-    <i class="fab fa-facebook-f"></i>
-  </a>
-  
-  <a href="https://twitter.com" target="_blank" class="text-white me-2">
-    <i class="fab fa-twitter"></i>
-  </a>
-  
-  <a href="https://www.instagram.com" target="_blank" class="text-white me-2">
-    <i class="fab fa-instagram"></i>
-  </a>
-  
-  <a href="https://www.linkedin.com" target="_blank" class="text-white">
-    <i class="fab fa-linkedin-in"></i>
-  </a>
-  </footer>
-  
+    <a href="https://www.facebook.com" target="_blank" class="text-white me-2" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://twitter.com" target="_blank" class="text-white me-2" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com" target="_blank" class="text-white me-2" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.linkedin.com" target="_blank" class="text-white" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+</footer>
 
 <!-- ================= JS FILE ================= -->
 <script src="assets/js/quiz.js"></script>
 
 </body>
 </html>
-
