--- a/404.html
+++ b/404.html
@@ -20,10 +20,10 @@
 <body>
 
     <!-- ================= NAVBAR ================= -->
-    <header class="fixed-top bg-dark text-white p-3">
+    <header class="fixed-top bg-dark text-white p-3" role="banner">
         <div class="container d-flex justify-content-between align-items-center">
             <h1 class="h4 mb-0">LearnDrive</h1>
-            <nav>
+            <nav role="navigation" aria-label="Main navigation">
                 <a href="index.html" class="text-white me-3">Home</a>
                 <a href="topics.html" class="text-white me-3">Topics</a>
                 <a href="quiz.html" class="text-white">Quiz</a>
@@ -32,21 +32,21 @@
     </header>
 
     <!-- ================= 404 CONTENT ================= -->
-    <main class="d-flex flex-column justify-content-center align-items-center text-center" style="height: 100vh; padding-top: 80px;">
-        <h1 class="display-1 fw-bold text-dark">404</h1>
+    <main role="main" class="d-flex flex-column justify-content-center align-items-center text-center" style="height: 100vh; padding-top: 80px;" aria-labelledby="errorHeading" aria-describedby="errorDescription">
+        <h1 id="errorHeading" class="display-1 fw-bold text-dark">404</h1>
         <h2 class="mb-4">Page Not Found</h2>
-        <p class="mb-4">Sorry, the page you are looking for does not exist or has been moved.</p>
-        <a href="index.html" class="btn btn-dark btn-lg">Return Home</a>
+        <p id="errorDescription" class="mb-4">Sorry, the page you are looking for does not exist or has been moved.</p>
+        <a href="index.html" class="btn btn-dark btn-lg" aria-label="Return to homepage">Return Home</a>
     </main>
 
     <!-- ================= FOOTER ================= -->
-    <footer class="bg-dark text-white text-center py-4 mt-auto">
+    <footer class="bg-dark text-white text-center py-4 mt-auto" role="contentinfo">
         <p class="mb-1">© 2026 LearnDrive</p>
         <p class="mb-2">Supporting learner drivers across the UK</p>
-        <a href="#" class="text-white me-2"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="text-white me-2"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="text-white me-2"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" class="text-white me-2" aria-label="Facebook page"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="text-white me-2" aria-label="Twitter page"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="text-white me-2" aria-label="Instagram page"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="text-white" aria-label="LinkedIn page"><i class="fab fa-linkedin-in"></i></a>
     </footer>
 
     <!-- Bootstrap JS -->
